--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -15,5 +15,5 @@ body {
 }
 body {
   margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-family: "Inter Tight", "Helvetica Neue", sans-serif;
 }
