--- a/frontend/src/app/sample/sample.component.html
+++ b/frontend/src/app/sample/sample.component.html
@@ -1,4 +1,4 @@
-<table class="table">
+<!-- <table class="table">
     <thead>
         <tr>
             <th scope="col">Faculty Name</th>
@@ -16,4 +16,4 @@
             <td>{{ faculty.faculty_type }}</td>
         </tr>
     </tbody>
-</table>
+</table> -->
