--- a/frontend/src/styles/theme.scss
+++ b/frontend/src/styles/theme.scss
@@ -5,6 +5,7 @@
   --neutral-base: #151515;
   --neutral-fade: #1a1a1a26;
   --neutral-light: #eeeeee;
+  --neutral-bar: #d7d7d7;
   --neutral-disabled: #192422;
 
   --primary-one: #800000;
@@ -19,6 +20,7 @@
   --neutral-base: #dfdfdf;
   --neutral-fade: #d4d4d42a;
   --neutral-light: #1f1f1f;
+  --neutral-bar: #323232;
   --neutral-disabled: #005642;
 
   --primary-one: #a93232;
