--- a/frontend/src/styles/mixins.scss
+++ b/frontend/src/styles/mixins.scss
@@ -9,3 +9,10 @@
   align-items: center;
   justify-content: center;
 }
+
+@mixin reset-styles {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  box-sizing: border-box;
+}
