rename faculty header and content id

--- a/frontend/src/app/core/components/faculty/main/main.component.html
+++ b/frontend/src/app/core/components/faculty/main/main.component.html
@@ -1,5 +1,5 @@
 <div class="faculty-main-container">
-  <header>
+  <header class="faculty-main-header">
     <!---->
     <div class="header-name">
       <img
@@ -41,7 +41,7 @@
     </div>
   </header>
 
-  <main class="faculty-main">
+  <main class="faculty-main-content">
     <router-outlet></router-outlet>
   </main>
 </div>
