add home component initial design

--- a/frontend/src/app/core/components/faculty/home/home.component.html
+++ b/frontend/src/app/core/components/faculty/home/home.component.html
@@ -1,1 +1,24 @@
-<p>home works!</p>
+<div class="faculty-home-container">
+  <!--Home first row-->
+  <div class="home-row-one">
+    <!--Home greertings-->
+    <div id="home_greetings">
+      <h1>Hello, PUP Faculty</h1>
+      <p>Here's your schedule and other key information for the semester.</p>
+    </div>
+    <!--Active Semester-->
+    <div id="active_semester">
+      <!--Active Semester Text-->
+      <div id="semester_text">
+        <mat-icon>school</mat-icon>
+        <span>1st Semester, A.Y. 2024-2025</span>
+      </div>
+
+      <!--Active Semester Progress Bar-->
+      <div id="semester_bar">
+        <div id="progress_base"></div>
+        <div id="progress_fill"></div>
+      </div>
+    </div>
+  </div>
+</div>
