add initial preferences page design

--- a/frontend/src/app/core/components/faculty/home/home.component.scss
+++ b/frontend/src/app/core/components/faculty/home/home.component.scss
@@ -20,7 +20,7 @@
     h1 {
       @include reset-styles;
       width: max-content;
-      font-size: var(--font-size-3xl);
+      font-size: var(--font-size-2xxl);
       font-weight: 700;
 
       /* Gradient text */
