--- a/frontend/src/app/core/components/faculty/main/main.component.scss
+++ b/frontend/src/app/core/components/faculty/main/main.component.scss
@@ -56,7 +56,7 @@
   .header-navbar {
     align-self: center;
     align-items: stretch;
-    gap: var(--spacing-lg);
+    gap: var(--spacing-md);
     background-color: var(--neutral-light);
     border-radius: var(--border-radius-xl);
     position: relative;
