--- a/frontend/src/styles/theme.scss
+++ b/frontend/src/styles/theme.scss
@@ -9,6 +9,7 @@
   --neutral-disabled: #192422;
 
   --primary-one: #800000;
+  --primary-two: #a93232;
 
   --error-base: #800000;
 }
@@ -24,6 +25,7 @@
   --neutral-disabled: #005642;
 
   --primary-one: #a93232;
+  --primary-two: #9e2525;
 
   --error-base: #b43a3a;
 }
