lighten neutral light color

--- a/frontend/src/styles/theme.scss
+++ b/frontend/src/styles/theme.scss
@@ -4,7 +4,7 @@
 
   --neutral-base: #151515;
   --neutral-fade: #1a1a1a26;
-  --neutral-light: #eeeeee;
+  --neutral-light: #f3f3f3;
   --neutral-bar: #d7d7d7;
   --neutral-disabled: #192422;
 
