--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -15,10 +15,15 @@
     }
   }
 
+  --gradient-primary: linear-gradient(90deg,
+    var(--primary-one) 0%,
+    var(--primary-two) 100%);
+
   // Typography
-  --font-family: "Inter Tight", "Helvetica Neue", sans-serif;
+  --font-family: "Inter Tight",
+  "Helvetica Neue",
+  sans-serif;
   --font-size-xs: 0.65rem;
-  --font-size-base: 16px;
   --font-size-sm: 0.875rem;
   --font-size-md: 1rem;
   --font-size-lg: 1.25rem;
@@ -40,6 +45,7 @@
   --spacing-xl: 2rem;
   --spacing-2xl: 2.5rem;
   --spacing-3xl: 3rem;
+  --spacing-4xl: 4rem;
 
   // Border radius
   --border-radius-base: 0.25rem;
@@ -89,10 +95,23 @@ body {
   box-sizing: border-box;
   background: var(--main-bg);
   font-family: "Inter Tight", "Helvetica Neue", sans-serif;
-  transition: background-color 0.5s ease, color 0.5s ease;
+  transition: background-color 0.75s ease;
 }
 
 * {
   color: var(--neutral-base);
+
   font-family: "Inter Tight", "Helvetica Neue", sans-serif;
+}
+
+/*
+.mdc-text-field--outlined {
+  --mdc-outlined-text-field-container-shape: 10px !important;
+}
+*/
+
+.mdc-text-field--filled {
+  // when appearance="fill"
+  border-top-left-radius: 10px !important;
+  border-top-right-radius: 10px !important;
 }
