--- a/frontend/src/styles/theme.scss
+++ b/frontend/src/styles/theme.scss
@@ -4,12 +4,14 @@
 
   --neutral-base: #151515;
   --neutral-fade: #1a1a1a26;
-  --neutral-light: #f3f3f3;
+  --neutral-light: #ebebeb;
+  --neutral-hover: #2c2c2c30;
+  --neutral-option: #a2a2a230;
   --neutral-bar: #d7d7d7;
-  --neutral-disabled: #192422;
 
   --primary-one: #800000;
   --primary-two: #a93232;
+  --primary-fade: #80000020;
 
   --error-base: #800000;
 }
@@ -21,11 +23,13 @@
   --neutral-base: #dfdfdf;
   --neutral-fade: #d4d4d42a;
   --neutral-light: #1f1f1f;
+  --neutral-hover: #6b6b6b9e;
+  --neutral-option: #34343481;
   --neutral-bar: #323232;
-  --neutral-disabled: #005642;
 
   --primary-one: #a93232;
   --primary-two: #9e2525;
+  --primary-fade: #a932322c;
 
   --error-base: #b43a3a;
 }
