add background transition directly to login

--- a/frontend/src/app/auth/login/login.component.scss
+++ b/frontend/src/app/auth/login/login.component.scss
@@ -1,3 +1,8 @@
+*,
+*::before {
+  transition: background-color 0.5s ease, color 0.5s ease;
+}
+
 .login-container {
   display: flex;
   height: 100vh;
@@ -19,7 +24,6 @@
   background-color: var(--login-bg);
   backdrop-filter: blur(50px) saturate(150%);
   z-index: 1;
-  transition: background-color 0.5s ease;
 }
 
 .login-image-section,
@@ -261,7 +265,6 @@
   .button-disabled {
     opacity: var(--opacity-half);
     cursor: not-allowed !important;
-    background-color: var(--neutral-disabled);
   }
 }
 
