--- a/frontend/src/styles/theme.scss
+++ b/frontend/src/styles/theme.scss
@@ -1,7 +1,9 @@
 :root {
+  /* Page background */
   --login-bg: #ffffffcc;
   --main-bg: #ffffff;
 
+  /* Neutral colors for text, element backgrounds, etc. */
   --neutral-base: #151515;
   --neutral-fade: #1a1a1a26;
   --neutral-light: #ebebeb;
@@ -9,17 +11,36 @@
   --neutral-option: #a2a2a230;
   --neutral-bar: #d7d7d7;
 
+  /* Primary colors variations */
   --primary-one: #800000;
   --primary-two: #a93232;
   --primary-fade: #80000020;
+  --primary-text: #800000;
+  --primary-hover: #e3d9d9;
 
   --error-base: #800000;
+
+  /* Gradient-speficic values */
+
+  // For gradient primary
+  --gradient-light-start: #740000;
+  --gradient-light-end: #ad0101;
+
+  // For gradient secondary
+  --gradient-dark-start: #232526;
+  --gradient-dark-end: #4c4d4e;
+
+  // For gradient soft-secondary
+  --gradient-soft-gray-start: #adadad;
+  --gradient-soft-gray-end: #e0e0e0;
 }
 
 .dark-theme {
+  /* Page background */
   --login-bg: #171717f1;
   --main-bg: #171717;
 
+  /* Neutral colors for text, element backgrounds, etc. */
   --neutral-base: #dfdfdf;
   --neutral-fade: #d4d4d42a;
   --neutral-light: #1f1f1f;
@@ -27,9 +48,26 @@
   --neutral-option: #34343481;
   --neutral-bar: #323232;
 
+  /* Primary colors variations */
   --primary-one: #a93232;
   --primary-two: #9e2525;
   --primary-fade: #a932322c;
+  --primary-text: #e15d5d;
+  --primary-hover: #2b2121;
 
   --error-base: #b43a3a;
+
+  /* Gradient-speficic values */
+
+  // For gradient primary
+  --gradient-light-start: #8d2828;
+  --gradient-light-end: #b54040;
+
+  // For gradient secondary
+  --gradient-dark-start: #252729;
+  --gradient-dark-end: #464849;
+
+  // For gradient soft-secondary
+  --gradient-soft-gray-start: #3a3a3a;
+  --gradient-soft-gray-end: #4a4a4a;
 }
